<resources>
    <string name="app_name">MyCalcc</string>
    <string name="oneBtn">1</string>
    <string name="twoBtn">2</string>
    <string name="threeBtn">3</string>
    <string name="fourBtn">4</string>
    <string name="fiveBtn">5</string>
    <string name="sixBtn">6</string>
    <string name="sevenBtn">7</string>
    <string name="eightBtn">8</string>
    <string name="nineBtn">9</string>
    <string name="zeroBtn">0</string>
    <string name="dotBtn">.</string>
    <string name="cBtn">C</string>
    <string name="plusMinBtn">+\-</string>
    <string name="percentBtn">%</string>
    <string name="divBtn">/</string>
    <string name="plusBtn">+</string>
    <string name="minusBtn">-</string>
    <string name="multiplyBtn">*</string>
    <string name="equalBtn">=</string>
    <string name="M">M</string>
    <string name="O">O</string>
    <string name="K">K</string>
    <string name="H">H</string>
    <string name="OO">O</string>
    <string name="V">V</string>
    <string name="I">♥</string>


</resources>